# ldt-data

./: .gitignore  AUTOMATION_SETUP.md  CLAUDE.md  MAINTENANCE_SCHEDULE.md  README.md  SESSION_NOTES_2025-12-06.md  UPDATE_PROCESS.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/metadata/: conference_talks.csv
data/public/: conference_stats.json  recent_talks.json  talks_by_year.json  top_speakers.json
docs/: ECOSYSTEM.md  PHASE_2_1_PLAN.md  ROADMAP.md
scripts/: export_for_web.py  generate_metadata.py
src/ldt-data/: example.py
